--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgb(70, 142, 106);
+  background-color: rgb(240, 240, 240);
 }
 
 section {
@@ -15,7 +15,7 @@ section {
   transform: translate(-50%, -75%);
   height: 30vh;
   width: 99vw;
-  background-color: rgb(168, 232, 200, 0.8);
+  background-color: rgba(248, 67, 12, 0.8);
 }
 
 #barchart {
@@ -28,7 +28,7 @@ section {
 }
 
 .bar {
-  background-color: rgb(109, 184, 146);
+  background-color: rgb(38, 24, 236);
   box-shadow: -3px -1px 4px 0px rgb(0, 0, 0, 0.5);
   height: 10px;
 }
